glf90w_constants.f90


    integer(c_int), bind(C, name="glf90w_client_api"),                     public :: GLFW_CLIENT_API
    integer(c_int), bind(C, name="glf90w_context_version_major"),          public :: GLFW_CONTEXT_VERSION_MAJOR
    integer(c_int), bind(C, name="glf90w_context_version_minor"),          public :: GLFW_CONTEXT_VERSION_MINOR
    integer(c_int), bind(C, name="glf90w_context_revision"),               public :: GLFW_CONTEXT_REVISION
    integer(c_int), bind(C, name="glf90w_context_robustness"),             public :: GLFW_CONTEXT_ROBUSTNESS
    integer(c_int), bind(C, name="glf90w_opengl_forward_compat"),          public :: GLFW_OPENGL_FORWARD_COMPAT
    integer(c_int), bind(C, name="glf90w_context_debug"),                  public :: GLFW_CONTEXT_DEBUG
    integer(c_int), bind(C, name="glf90w_opengl_debug_context"),           public :: GLFW_OPENGL_DEBUG_CONTEXT
    integer(c_int), bind(C, name="glf90w_opengl_profile"),                 public :: GLFW_OPENGL_PROFILE
    integer(c_int), bind(C, name="glf90w_context_release_behavior"),       public :: GLFW_CONTEXT_RELEASE_BEHAVIOR
    integer(c_int), bind(C, name="glf90w_context_no_error"),               public :: GLFW_CONTEXT_NO_ERROR
    integer(c_int), bind(C, name="glf90w_context_creation_api"),           public :: GLFW_CONTEXT_CREATION_API
    integer(c_int), bind(C, name="glf90w_scale_to_monitor"),               public :: GLFW_SCALE_TO_MONITOR
    integer(c_int), bind(C, name="glf90w_scale_framebuffer"),              public :: GLFW_SCALE_FRAMEBUFFER
    integer(c_int), bind(C, name="glf90w_cocoa_retina_framebuffer"),       public :: GLFW_COCOA_RETINA_FRAMEBUFFER
    integer(c_int), bind(C, name="glf90w_cocoa_frame_name"),               public :: GLFW_COCOA_FRAME_NAME
    integer(c_int), bind(C, name="glf90w_cocoa_graphics_switching"),       public :: GLFW_COCOA_GRAPHICS_SWITCHING
    integer(c_int), bind(C, name="glf90w_x11_class_name"),                 public :: GLFW_X11_CLASS_NAME
    integer(c_int), bind(C, name="glf90w_x11_instance_name"),              public :: GLFW_X11_INSTANCE_NAME
    integer(c_int), bind(C, name="glf90w_win32_keyboard_menu"),            public :: GLFW_WIN32_KEYBOARD_MENU
    integer(c_int), bind(C, name="glf90w_win32_showdefault"),              public :: GLFW_WIN32_SHOWDEFAULT
    integer(c_int), bind(C, name="glf90w_wayland_app_id"),                 public :: GLFW_WAYLAND_APP_ID
    integer(c_int), bind(C, name="glf90w_no_api"),                         public :: GLFW_NO_API
    integer(c_int), bind(C, name="glf90w_opengl_api"),                     public :: GLFW_OPENGL_API
    integer(c_int), bind(C, name="glf90w_opengl_es_api"),                  public :: GLFW_OPENGL_ES_API

    integer(c_int), bind(C, name="glf90w_no_robustness"),                  public :: GLFW_NO_ROBUSTNESS
    integer(c_int), bind(C, name="glf90w_no_reset_notification"),          public :: GLFW_NO_RESET_NOTIFICATION
    integer(c_int), bind(C, name="glf90w_lose_context_on_reset"),          public :: GLFW_LOSE_CONTEXT_ON_RESET

    integer(c_int), bind(C, name="glf90w_opengl_any_profile"),             public :: GLFW_OPENGL_ANY_PROFILE
    integer(c_int), bind(C, name="glf90w_opengl_core_profile"),            public :: GLFW_OPENGL_CORE_PROFILE
    integer(c_int), bind(C, name="glf90w_opengl_compat_profile"),          public :: GLFW_OPENGL_COMPAT_PROFILE

    integer(c_int), bind(C, name="glf90w_cursor"),                         public :: GLFW_CURSOR
    integer(c_int), bind(C, name="glf90w_sticky_keys"),                    public :: GLFW_STICKY_KEYS
    integer(c_int), bind(C, name="glf90w_sticky_mouse_buttons"),           public :: GLFW_STICKY_MOUSE_BUTTONS
    integer(c_int), bind(C, name="glf90w_lock_key_mods"),                  public :: GLFW_LOCK_KEY_MODS
    integer(c_int), bind(C, name="glf90w_raw_mouse_motion"),               public :: GLFW_RAW_MOUSE_MOTION

    integer(c_int), bind(C, name="glf90w_cursor_normal"),                  public :: GLFW_CURSOR_NORMAL
    integer(c_int), bind(C, name="glf90w_cursor_hidden"),                  public :: GLFW_CURSOR_HIDDEN
    integer(c_int), bind(C, name="glf90w_cursor_disabled"),                public :: GLFW_CURSOR_DISABLED
    integer(c_int), bind(C, name="glf90w_cursor_captured"),                public :: GLFW_CURSOR_CAPTURED

    integer(c_int), bind(C, name="glf90w_any_release_behavior"),           public :: GLFW_ANY_RELEASE_BEHAVIOR
    integer(c_int), bind(C, name="glf90w_release_behavior_flush"),         public :: GLFW_RELEASE_BEHAVIOR_FLUSH
    integer(c_int), bind(C, name="glf90w_release_behavior_none"),          public :: GLFW_RELEASE_BEHAVIOR_NONE

    integer(c_int), bind(C, name="glf90w_native_context_api"),             public :: GLFW_NATIVE_CONTEXT_API
    integer(c_int), bind(C, name="glf90w_egl_context_api"),                public :: GLFW_EGL_CONTEXT_API
    integer(c_int), bind(C, name="glf90w_osmesa_context_api"),             public :: GLFW_OSMESA_CONTEXT_API

    integer(c_int), bind(C, name="glf90w_angle_platform_type_none"),       public :: GLFW_ANGLE_PLATFORM_TYPE_NONE
    integer(c_int), bind(C, name="glf90w_angle_platform_type_opengl"),     public :: GLFW_ANGLE_PLATFORM_TYPE_OPENGL
    integer(c_int), bind(C, name="glf90w_angle_platform_type_opengles"),   public :: GLFW_ANGLE_PLATFORM_TYPE_OPENGLES
    integer(c_int), bind(C, name="glf90w_angle_platform_type_d3d9"),       public :: GLFW_ANGLE_PLATFORM_TYPE_D3D9
    integer(c_int), bind(C, name="glf90w_angle_platform_type_d3d11"),      public :: GLFW_ANGLE_PLATFORM_TYPE_D3D11
    integer(c_int), bind(C, name="glf90w_angle_platform_type_vulkan"),     public :: GLFW_ANGLE_PLATFORM_TYPE_VULKAN
    integer(c_int), bind(C, name="glf90w_angle_platform_type_metal"),      public :: GLFW_ANGLE_PLATFORM_TYPE_METAL

    integer(c_int), bind(C, name="glf90w_wayland_prefer_libdecor"),        public :: GLFW_WAYLAND_PREFER_LIBDECOR
    integer(c_int), bind(C, name="glf90w_wayland_disable_libdecor"),       public :: GLFW_WAYLAND_DISABLE_LIBDECOR

    integer(c_int), bind(C, name="glf90w_any_position"),                   public :: GLFW_ANY_POSITION

    integer(c_int), bind(C, name="glf90w_arrow_cursor"),                   public :: GLFW_ARROW_CURSOR
    integer(c_int), bind(C, name="glf90w_ibeam_cursor"),                   public :: GLFW_IBEAM_CURSOR
    integer(c_int), bind(C, name="glf90w_crosshair_cursor"),               public :: GLFW_CROSSHAIR_CURSOR
    integer(c_int), bind(C, name="glf90w_pointing_hand_cursor"),           public :: GLFW_POINTING_HAND_CURSOR
    integer(c_int), bind(C, name="glf90w_resize_ew_cursor"),               public :: GLFW_RESIZE_EW_CURSOR
    integer(c_int), bind(C, name="glf90w_resize_ns_cursor"),               public :: GLFW_RESIZE_NS_CURSOR
    integer(c_int), bind(C, name="glf90w_resize_nwse_cursor"),             public :: GLFW_RESIZE_NWSE_CURSOR
    integer(c_int), bind(C, name="glf90w_resize_nesw_cursor"),             public :: GLFW_RESIZE_NESW_CURSOR
    integer(c_int), bind(C, name="glf90w_resize_all_cursor"),              public :: GLFW_RESIZE_ALL_CURSOR
    integer(c_int), bind(C, name="glf90w_not_allowed_cursor"),             public :: GLFW_NOT_ALLOWED_CURSOR
    integer(c_int), bind(C, name="glf90w_hresize_cursor"),                 public :: GLFW_HRESIZE_CURSOR
    integer(c_int), bind(C, name="glf90w_vresize_cursor"),                 public :: GLFW_VRESIZE_CURSOR
    integer(c_int), bind(C, name="glf90w_hand_cursor"),                    public :: GLFW_HAND_CURSOR
    integer(c_int), bind(C, name="glf90w_connected"),                      public :: GLFW_CONNECTED
    integer(c_int), bind(C, name="glf90w_disconnected"),                   public :: GLFW_DISCONNECTED

    integer(c_int), bind(C, name="glf90w_joystick_hat_buttons"),           public :: GLFW_JOYSTICK_HAT_BUTTONS
    integer(c_int), bind(C, name="glf90w_angle_platform_type"),            public :: GLFW_ANGLE_PLATFORM_TYPE
    integer(c_int), bind(C, name="glf90w_platform"),                       public :: GLFW_PLATFORM
    integer(c_int), bind(C, name="glf90w_cocoa_chdir_resources"),          public :: GLFW_COCOA_CHDIR_RESOURCES
    integer(c_int), bind(C, name="glf90w_cocoa_menubar"),                  public :: GLFW_COCOA_MENUBAR
    integer(c_int), bind(C, name="glf90w_x11_xcb_vulkan_surface"),         public :: GLFW_X11_XCB_VULKAN_SURFACE
    integer(c_int), bind(C, name="glf90w_wayland_libdecor"),               public :: GLFW_WAYLAND_LIBDECOR
    integer(c_int), bind(C, name="glf90w_any_platform"),                   public :: GLFW_ANY_PLATFORM
    integer(c_int), bind(C, name="glf90w_platform_win32"),                 public :: GLFW_PLATFORM_WIN32
    integer(c_int), bind(C, name="glf90w_platform_cocoa"),                 public :: GLFW_PLATFORM_COCOA
    integer(c_int), bind(C, name="glf90w_platform_wayland"),               public :: GLFW_PLATFORM_WAYLAND
    integer(c_int), bind(C, name="glf90w_platform_x11"),                   public :: GLFW_PLATFORM_X11
    integer(c_int), bind(C, name="glf90w_platform_null"),                  public :: GLFW_PLATFORM_NULL
    integer(c_int), bind(C, name="glf90w_dont_care"),                      public :: GLFW_DONT_CARE

end module glf90w_constants
! -----------------
! Copyright (C) 2024 Gaétan Jalin
!
! This software is provided 'as-is', without any express or implied
! warranty.  In no event will the authors be held liable for any damages
! arising from the use of this software.
!
! Permission is granted to anyone to use this software for any purpose,
! including commercial applications, and to alter it and redistribute it
! freely, subject to the following restrictions:
!
!    1. The origin of this software must not be misrepresented; you must not
!    claim that you wrote the original software. If you use this software
!    in a product, an acknowledgment in the product documentation would be
!    appreciated but is not required.
!
!    2. Altered source versions must be plainly marked as such, and must not be
!    misrepresented as being the original software.
!
!    3. This notice may not be removed or altered from any source distribution.
! -----------------

